@@ -53,7 +53,6 @@ import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.LinkedList;
@@ -100,6 +99,7 @@ import org.netbeans.modules.cnd.makeproject.api.support.MakeProjectHelper;
 import org.netbeans.modules.cnd.makeproject.api.support.MakeProjectListener;
 import org.netbeans.modules.cnd.makeproject.ui.FolderSearchInfo.FileObjectNameMatcherImpl;
 import org.netbeans.modules.cnd.makeproject.ui.MakeLogicalViewProvider;
+import org.netbeans.modules.cnd.makeproject.ui.options.FullFileIndexer;
 import org.netbeans.modules.cnd.spi.remote.RemoteSyncFactory;
 import org.netbeans.modules.cnd.spi.toolchain.ToolchainProject;
 import org.netbeans.modules.cnd.utils.CndPathUtilitities;
@@ -240,8 +240,10 @@ public final class MakeProject implements Project, MakeProjectListener, Runnable
         readProjectExtension(data, CPP_EXTENSIONS, cppExtensions);
         sourceEncoding = getSourceEncodingFromProjectXml();
 
-        if (templateListener == null) {
-            DataLoaderPool.getDefault().addOperationListener(templateListener = new MakeTemplateListener());
+        synchronized(MakeProject.class) {
+            if (templateListener == null) {
+                DataLoaderPool.getDefault().addOperationListener(templateListener = new MakeTemplateListener());
+            }
         }
         LOGGER.log(Level.FINE, "End of creation MakeProject@{0} {1}", new Object[]{System.identityHashCode(MakeProject.this), helper.getProjectDirectory().getNameExt()}); // NOI18N
     }
@@ -716,7 +718,6 @@ public final class MakeProject implements Project, MakeProjectListener, Runnable
      */
     private String getCustomizerIdFromProjectXML() {
         Element data = helper.getPrimaryConfigurationData(true);
-        data = helper.getPrimaryConfigurationData(true);
         NodeList nodeList = data.getElementsByTagName(MakeProjectTypeImpl.CUSTOMIZERID_ELEMENT);
         if (nodeList != null && nodeList.getLength() > 0) {
             Node typeNode = nodeList.item(0).getFirstChild();
@@ -735,8 +736,6 @@ public final class MakeProject implements Project, MakeProjectListener, Runnable
      * If not found, try project.xml (V >= V78)
      */
     private int getActiveConfigurationType() {
-        int type = -1;
-
         // If configurations already read, get it from active configuration (it may have changed)
         MakeConfiguration makeConfiguration = getActiveConfiguration();
         if (makeConfiguration != null) {
@@ -744,7 +743,7 @@ public final class MakeProject implements Project, MakeProjectListener, Runnable
         }
 
         // Get it from private.xml (version >= V77)
-        type = getActiveConfigurationTypeFromPrivateXML();
+        int type = getActiveConfigurationTypeFromPrivateXML();
         if (type >= 0) {
             return type;
         }
@@ -763,7 +762,6 @@ public final class MakeProject implements Project, MakeProjectListener, Runnable
      */
     private int getActiveConfigurationTypeFromProjectXML() {
         Element data = helper.getPrimaryConfigurationData(true);
-        data = helper.getPrimaryConfigurationData(true);
         NodeList nodeList = data.getElementsByTagName(MakeProjectTypeImpl.CONFIGURATION_TYPE_ELEMENT);
         if (nodeList != null && nodeList.getLength() > 0) {
             Node typeNode = nodeList.item(0).getFirstChild();
@@ -1555,28 +1553,24 @@ public final class MakeProject implements Project, MakeProjectListener, Runnable
             List<PathResourceImplementation> list = new LinkedList<PathResourceImplementation>();
             SourceGroup[] groups = sources.getSourceGroups("generic"); // NOI18N
             for (SourceGroup g : groups) {
-                try {
-                    FileObject rootFolder = g.getRootFolder();
-                    URL url = rootFolder.getURL();
-                    // A workaround for #196328 - IllegalArgumentException on save Project properties
-                    if (rootFolder.isFolder() && !url.toExternalForm().endsWith("/")) { //NOI18N
-                        try {
-                            URL url2 = new URL(url.toExternalForm() + '/'); //NOI18N                     
-                            FileObject fo = URLMapper.findFileObject(url2);
-                            if (fo != null && fo.equals(rootFolder)) {
-                                url = url2;
-                            }                            
-                        } catch (MalformedURLException ex) {
-                            Exceptions.printStackTrace(ex);
-                        } catch (Exception ex) {
-                            Exceptions.printStackTrace(ex);
-                        }
+                FileObject rootFolder = g.getRootFolder();
+                URL url = rootFolder.toURL();
+                // A workaround for #196328 - IllegalArgumentException on save Project properties
+                if (rootFolder.isFolder() && !url.toExternalForm().endsWith("/")) { //NOI18N
+                    try {
+                        URL url2 = new URL(url.toExternalForm() + '/'); //NOI18N                     
+                        FileObject fo = URLMapper.findFileObject(url2);
+                        if (fo != null && fo.equals(rootFolder)) {
+                            url = url2;
+                        }                            
+                    } catch (MalformedURLException ex) {
+                        Exceptions.printStackTrace(ex);
+                    } catch (Exception ex) {
+                        Exceptions.printStackTrace(ex);
                     }
-                    // end of workaround for #196328
-                    list.add(new PathResourceImpl(ClassPathSupport.createResource(url)));
-                } catch (FileStateInvalidException ex) {
-                    Logger.getLogger(MakeProject.class.getName()).log(Level.WARNING, null, ex);
                 }
+                // end of workaround for #196328
+                list.add(new PathResourceImpl(ClassPathSupport.createResource(url)));
             }
 
             synchronized (this) {
@@ -1669,11 +1663,7 @@ public final class MakeProject implements Project, MakeProjectListener, Runnable
             if (MakeProjectPaths.SOURCES.equals(type)) {
                 for (SourceGroup sg : sources.getSourceGroups(MakeSources.GENERIC)) {
                     if (sg.getRootFolder().equals(file)) {
-                        try {
-                            return ClassPathSupport.createClassPath(Arrays.asList(new PathResourceImpl(ClassPathSupport.createResource(file.getURL()))));
-                        } catch (FileStateInvalidException ex) {
-                            Exceptions.printStackTrace(ex);
-                        }
+                        return ClassPathSupport.createClassPath(Arrays.asList(new PathResourceImpl(ClassPathSupport.createResource(file.toURL()))));
                     }
                 }
             }
@@ -1686,7 +1676,7 @@ public final class MakeProject implements Project, MakeProjectListener, Runnable
 
         @Override
         public void propertyChange(PropertyChangeEvent evt) {
-            if (MakeOptions.FULL_FILE_INDEXER.equals(evt.getPropertyName())) {
+            if (FullFileIndexer.FULL_FILE_INDEXER.equals(evt.getPropertyName())) {
                 registerClassPath(Boolean.TRUE.equals(evt.getNewValue()));
             }
         }
